--- a/navbar.css
+++ b/navbar.css
@@ -1,18 +1,17 @@
 .navbar {
   text-align: center;
-  margin-bottom: 20px;
 }
 
-.content{
+/* .content{
     float: left;
     padding-top: 20px;
     padding-right: 100px;
     padding-left: 10px;
-}
+} */
 
-.la,.lo{
+/* .la,.lo{
     width: 30%;
-}
+} */
 
 .details{
     width: 100%;
